force-app/main/default/objects/Journey__c/fields/Candidate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email_Address__c</fullName>
    <description>Stores Mainlydigital&apos;s candidate email address.</description>
    <label>Candidate Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>