force-app/main/default/objects/Journey__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <description>Stores Mainlydigital&apos;s candidate name</description>
    <label>Candidate Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>