force-app/main/default/objects/Journey__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Manager Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>