force-app/main/default/objects/Journey__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>Stores the name of the manager that is assigned to each Mainlydigital candidate.</description>
    <label>Manager Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>