force-app/main/default/objects/Journey__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This allows one template to create multiple journeys records, which run independently.</description>
    <label>Template Name</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Journeys</relationshipLabel>
    <relationshipName>Journey</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>